tests/baselines/reference/parserObjectCreationArrayLiteral2.errors.txt
tests/cases/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral2.ts(1,5): error TS2304: Cannot find name 'Foo'.


==== tests/cases/conformance/parser/ecmascript5/parserObjectCreationArrayLiteral2.ts (1 errors) ====
    new Foo[1];
        ~~~
!!! error TS2304: Cannot find name 'Foo'.